Shishi NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
See the end for copying conditions.

* Version 0.0.37 (unreleased)

* Version 0.0.36 (released 2008-02-14)

** Fix warnings in generated man pages (silence lintian).

** Update gnulib files.

* Version 0.0.35 (released 2008-02-07)

** Warnings about missing configuration files are only printed once.

** Fix debug message printing.

** Fix non-portable use of brace expansion in makefiles.

* Version 0.0.34 (released 2008-01-16)

** Several code fixes for MinGW.
A mingw build now compiles and passes the self-tests under Wine.

** When built under MinGW, generate a libshishi-XX.def using -Wl,--output-def.
Useful when developing applications with Visual Studio.

** Use gettext 0.17.

** Update and re-factor gnulib files.
There is now a new gnulib directory src/gl/ and db/gl/ for those
modules that aren't needed by libshishi, but used by the command-line
tools and libshisa, respectively.

** If syslog is not available, shishid is not built.
Implementing an alternative logging mechanism is needed in order to
re-enable building shishid on platforms that lack syslog.

** New types for DNS classes:
SHISHI_DNS_IN: New #define.

* Version 0.0.33 (released 2007-09-14)

** libpam_shishi: Don't echo password when reading it from console.
Reported by Jack Bates <ms419@freezone.co.uk>.

** libpam_shishi: Save read password in PAM library for other modules.
Reported by Jack Bates <ms419@freezone.co.uk>.

** Update translations.

* Version 0.0.32 (released 2007-06-29)

** Shishi is now licensed under the GPL version 3 or later.

** Remove extra/inetutils.diff since the patch has been merged into InetUtils.

** Update gnulib files.

* Version 0.0.31 (released 2007-06-11)

** Shishi is now developed using Git instead of CVS.
A public git mirror is available from
<http://repo.or.cz/w/shishi.git>.
