@@ -23,6 +23,6 @@ AM_CPPFLAGS = -I../gl
 EXTRA_DIST = README
 
 noinst_LTLIBRARIES = libminitasn1.la
-libminitasn1_la_SOURCES = libtasn1.h mem.h gstr.h errors.h int.h	\
+libminitasn1_la_SOURCES = libtasn1.h gstr.h errors.h int.h		\
 	parser_aux.h structure.h element.h decoding.c gstr.c errors.c	\
 	parser_aux.c structure.c element.c coding.c
